Fix icon sizing on mobile

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -30,7 +30,8 @@ relevant-documents.page--banner {
 	}	
 	
 	img.partners-callout-icon {
-		margin-bottom: 1rem;
+		max-width: 106px;
+		margin-bottom: 2rem;
 	}
 	
 	.can-help {
